<resources>
    <string name="app_name">RentACar</string>
    <string name="no_cars_added">No cars are added yet!</string>
    <string name="remove_car">Remove car</string>
    <string name="hire_car">Hire car</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="time_for_hire">Hire vehicle (in minutes!)</string>
    <string name="model">Model</string>
    <string name="reg_number">Registration Number</string>
    <string name="please_enter_model">Please enter model</string>
    <string name="please_enter_registration_number">Please enter registration Number</string>
    <string name="please_enter_time">Please enter the time (in minutes!)</string>
    <string name="please_enter_values_greater">Please enter values greater than zero</string>
    <string name="insert_failed">Insert failed</string>
    <string name="delete_failed">Delete failed</string>
    <string name="update_failed">Update failed</string>
    <string name="reg_number_colons">Plate:</string>
    <string name="model_colons">Model:</string>
    <string name="username_colons">Username:</string>
    <string name="password_colons">Password:</string>
    <string name="register">Register</string>
    <string name="register_underlined"><u>Register</u></string>
    <string name="login">Login</string>
    <string name="wrong_credentials">Wrong username or password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_characters">Please enter at least 5 characters </string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="user_exist">Username already taken</string>
    <string name="user_created">User created</string>
</resources>