<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    android:layout_width    ="wrap_content"
    android:layout_height   ="wrap_content"
    xmlns:app               ="http://schemas.android.com/apk/res-auto"
    xmlns:tools             ="http://schemas.android.com/tools">

    <TextView
        android:id                              ="@+id/modelTxt"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:layout_marginStart              ="16dp"
        android:layout_marginTop                ="24dp"
        android:text                            ="@string/model_colons"
        app:layout_constraintStart_toStartOf    ="parent"
        app:layout_constraintTop_toTopOf        ="parent" />

    <TextView
        android:id                              ="@+id/modelTextView"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:layout_marginStart              ="8dp"
        android:layout_marginTop                ="24dp"
        app:layout_constraintStart_toEndOf      ="@id/modelTxt"
        app:layout_constraintTop_toTopOf        ="parent"
        tools:text                              ="Mercedes"/>

    <TextView
        android:id                              ="@+id/regNumberTet"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:layout_marginStart              ="16dp"
        android:layout_marginTop                ="16dp"
        android:text                            ="@string/reg_number_colons"
        android:layout_marginBottom             ="16dp"
        app:layout_constraintTop_toBottomOf     ="@id/modelTxt"
        app:layout_constraintStart_toStartOf    ="parent"
        app:layout_constraintBottom_toBottomOf  ="parent"/>

    <TextView
        android:id                              ="@+id/regNumberTextView"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:layout_marginStart              ="8dp"
        android:layout_marginTop                ="16dp"
        android:layout_marginBottom             ="16dp"
        app:layout_constraintTop_toBottomOf     ="@id/modelTextView"
        app:layout_constraintStart_toEndOf      ="@id/regNumberTet"
        app:layout_constraintBottom_toBottomOf  ="parent"
        tools:text                              ="H1111HH"/>

    <Button
        android:id                              ="@+id/hireCarButton"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:text                            ="@string/hire_car"
        android:layout_marginEnd                ="16dp"
        app:layout_constraintTop_toTopOf        ="@id/modelTextView"
        app:layout_constraintBottom_toBottomOf  ="@id/regNumberTextView"
        app:layout_constraintEnd_toEndOf        ="parent" />

    <Button
        android:id                              ="@+id/removeCarButton"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:text                            ="@string/remove_car"
        android:layout_marginEnd                ="16dp"
        app:layout_constraintTop_toTopOf        ="@id/modelTextView"
        app:layout_constraintBottom_toBottomOf  ="@id/regNumberTextView"
        app:layout_constraintEnd_toEndOf        ="parent"/>

    <View
        android:layout_width                    ="match_parent"
        android:layout_height                   ="1dp"
        android:layout_marginTop                ="8dp"
        android:background                      ="@color/separatorColor"
        app:layout_constraintBottom_toBottomOf  ="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>