<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:app               ="http://schemas.android.com/apk/res-auto"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id                          ="@+id/centerGuideline"
        android:layout_width                ="wrap_content"
        android:layout_height               ="wrap_content"
        android:orientation                 ="horizontal"
        app:layout_constraintGuide_percent  ="0.55"/>

    <TextView
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:text                            ="@string/login"
        android:textSize                        ="20sp"
        android:layout_marginBottom             ="16dp"
        app:layout_constraintStart_toStartOf    ="parent"
        app:layout_constraintEnd_toEndOf        ="parent"
        app:layout_constraintBottom_toTopOf     ="@id/usernameTxtInputLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id                              ="@+id/usernameTxtInputLayout"
        android:layout_width                    ="match_parent"
        android:layout_height                   ="wrap_content"
        android:layout_marginStart              ="18dp"
        android:layout_marginTop                ="16dp"
        android:layout_marginEnd                ="18dp"
        android:hint                            ="@string/username_colons"
        android:maxLength                       ="18"
        app:counterEnabled                      ="true"
        app:counterMaxLength                    ="18"
        app:layout_constraintBottom_toTopOf     ="@id/passwordTxtInputLayout"
        app:layout_constraintStart_toStartOf    ="parent"
        app:layout_constraintEnd_toEndOf        ="parent">

    <EditText
        android:id              ="@+id/usernameEditText"
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:maxLines        ="1"
        android:maxLength       ="18"
        android:textSize        ="17sp"
        android:gravity         ="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id                              ="@+id/passwordTxtInputLayout"
        android:layout_width                    ="match_parent"
        android:layout_height                   ="wrap_content"
        android:layout_marginStart              ="18dp"
        android:layout_marginTop                ="16dp"
        android:layout_marginEnd                ="18dp"
        android:hint                            ="@string/password_colons"
        android:maxLength                       ="18"
        app:counterEnabled                      ="true"
        app:counterMaxLength                    ="18"
        app:layout_constraintBottom_toTopOf     ="@id/centerGuideline"
        app:layout_constraintStart_toStartOf    ="parent"
        app:layout_constraintEnd_toEndOf        ="parent">

        <EditText
            android:id              ="@+id/passwordEditText"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:maxLines        ="1"
            android:maxLength       ="18"
            android:textSize        ="17sp"
            android:gravity         ="center"
            android:inputType       ="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id                              ="@+id/loginButton"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:text                            ="@string/login"
        android:textSize                        ="14sp"
        android:layout_marginTop                ="8dp"
        app:layout_constraintEnd_toEndOf        ="parent"
        app:layout_constraintStart_toStartOf    ="parent"
        app:layout_constraintTop_toBottomOf     ="@id/passwordTxtInputLayout"/>

    <TextView
        android:id                              ="@+id/registerButton"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:text                            ="@string/register_underlined"
        android:textSize                        ="17sp"
        android:textColor                       ="@color/blue"
        android:padding                         ="8dp"
        android:layout_marginTop                ="16dp"
        app:layout_constraintTop_toBottomOf     ="@id/loginButton"
        app:layout_constraintStart_toStartOf    ="parent"
        app:layout_constraintEnd_toEndOf        ="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>